<resources>
    <string name="app_name">Customer Consent Form</string>
    <string name="main_menu_admin">Main Menu (Administrator)</string>
    <string name="search_customer">Search For Customer)</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password2">Password</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- Strings related to Customer -->
    <string name="search_for_customer">Search For Customer</string>
    <string name="create_customer">Create Customer</string>
    <string name="customer_id">Customer ID</string>
    <string name="forename">Forename</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="email_address">Email Address</string>
    <string name="contact_number">Contact Number</string>
    <string name="dob">DOB</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="county">Country</string>
    <string name="gender">Gender</string>
    <string name="post_code">Post Code</string>
    <string name="registration_date">Registration Date </string>


    <!-- Strings related to Staff -->
    <string name="create_staff">Create Staff</string>
    <string name="retype_password">Retype Password </string>
    <string name="manage_staff">Manage Staff  </string>
    <string name="search_staff">Search For Staff  </string>

    <!-- Strings related to Treatments -->
    <string name="treatments">Treatments</string>

    <string name="signature_and_agreement">Signature And Agreement</string>
    <string name="signature_title">Customer Signature</string>
    <string name="signature_save_and_complete">Save And Complete</string>
    <string name="signature_clear">Clear Signature</string>
    <string name="activity_next">Next</string>

    <string name="upload">Upload</string>
    <string name="search_query">Search Query:</string>
    <string name="main_menu">Main Menu</string>
    <string name="branch_name">Branch Name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="first_consent_info">I have read and understand the customer consent form.
        I have undertaken the tinting/glue patch test and have observed a 24 hour waiting period after the patch test has been performed.
        I agree that GE Brow Bar or Superdrug cannot be held responsible for any allergic reaction of the tinting treatment.</string>
    <string name="second_consent_info">I have had a consultation with the therapist who will be performing this procedure and all my questions concerning the process have been answered to my satisfaction.
        I agree to undertake the tinting/lash extension treatment and fully agree to the Terms and Conditions listed below associated with this treatment.
        I agree that GE Brow Bar or Superdrug cannot be held responsible for any allergic reaction as a result of this treatment.</string>
    <string name="third_conset_info"> <b>Terms and Condition</b>\n

        Before giving my consent by signing this form, I have been informed of the methods, nature and schedule of this procedure.
        I have also undertaken a patch test and observed a 24 hour waiting period after the patch
        test has been performed.\n
        I agree to the terms and conditions of this form and I also agree that GE Brow Bar or Superdrug cannot be held responsible for any allergic reaction as a result of this treatment.
        Therefore there will be no consequent fault by GE Brow Bar Superdrug and I cannot request any monetary or complimentary service repercussions,
        (whether monetary or complimentary service/treatment reparation, refunding or compensation) to be made to myself by GE Brow Bar or Superdrug, after the tinting/lash extension treatment has been completed on this day. (Refer to the aforementioned date).</string>


</resources>
