<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:id="@+id/edit_staff_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/edit_staff_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/edit_staff_linearLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dip" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="Branch Name"
                android:layout_marginBottom="5dp"/>

            <Spinner
                android:id="@+id/edit_staff_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/branch_name"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/forename" />

            <EditText
                android:id="@+id/edit_staff_forename"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="Enter your Forename"
                android:inputType="textCapSentences" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/surname" />

            <EditText
                android:id="@+id/edit_staff_surname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="Enter your Surename"
                android:inputType="textCapSentences" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Username"
                android:id="@+id/userName"/>

            <EditText
                android:id="@+id/edit_staff_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="Enter your Username"/>


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <EditText
                android:id="@+id/edit_staff_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="Enter your Email ID"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_number" />

            <EditText
                android:id="@+id/edit_staff_phone_number"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="Enter your Phone number"
                android:inputType="phone" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/dob" />

            <EditText
                android:id="@+id/edit_staff_dob"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="Enter your D.O.B"
                android:inputType="date"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/address" />

            <EditText
                android:id="@+id/edit_staff_address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="Enter your Address"
                android:inputType="textCapSentences" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/city" />

            <EditText
                android:id="@+id/edit_staff_city"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="Enter your City"
                android:inputType="textCapSentences" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/post_code" />

            <EditText
                android:id="@+id/edit_staff_post_code"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="Enter your Post Code"
                android:inputType="textCapCharacters"
                />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/registration_date" />

            <EditText

                android:id="@+id/edit_staff_registration_date"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Date"
                android:inputType="date" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/prompt_password" />

            <EditText

                android:id="@+id/edit_staff_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="Enter Password"
                android:inputType="textPassword" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/retype_password" />

            <EditText

                android:id="@+id/edit_staff_retype_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="Retype Password"
                android:inputType="textPassword" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender" />
            <RadioGroup
                android:id="@+id/edit_staff_radioGrp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/edit_staff_radioM"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:layout_weight="1"
                    android:textSize="14dp"
                    android:text="Male"
                    />
                <RadioButton
                    android:id="@+id/edit_staff_radioF"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:layout_weight="1"
                    android:textSize="14dp"
                    android:text="Female"
                    />
            </RadioGroup>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Is Administrator" />

            <RadioGroup
                android:id="@+id/edit_staff_or_adminGrp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/edit_no_radio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:layout_weight="1"
                    android:textSize="14dp"
                    android:text="No"/>

                <RadioButton
                    android:id="@+id/edit_yes_radio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:layout_weight="1"
                    android:textSize="14dp"
                    android:text="Yes"/>
            </RadioGroup>

            <TextView
                android:id="@+id/search_error"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dip"
                android:textColor="#e30000"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/edit_staff_button_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="1dp"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:layout_marginTop="20dip"
                    android:background="#ff6347"
                    android:text="@string/save"
                    android:textColor="#fff" />
                <Button
                    android:id="@+id/edit_button_cancel"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:layout_marginLeft="1dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dip"
                    android:background="#ff6347"
                    android:text="@string/cancel"
                    android:textColor="#fff" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

